--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="assets/css/estilos.css">
-
+    
     <title>CUPPON</title>
 </head>
 <body>
@@ -56,7 +56,7 @@
                 <div class="card-body">
                   <h4 class="card-title text-star">Plumon coral Fleece estampado en modelo y tamaño a elección</h4>
                   <h5 class="card-text">This is a longer card with supporting .</h5>
-                  <h6 class="card-text">9191 aveniu</h6>
+                  <h6 class="card-text"><i class="fa fa-map-marker-alt" aria-hidden="true"></i>9191 aveniu</h6>
                   <hr>
                   <ul class="list-inline text-end">
                     <li class="list-inline-item ">$30.000</li>
@@ -72,7 +72,7 @@
                   <div class="card-body">
                     <h4 class="card-title text-star">Plumon coral Fleece estampado en modelo y tamaño a elección</h4>
                     <h5 class="card-text">This is a longer card with supporting .</h5>
-                    <h6 class="card-text">9191 aveniu</h6>
+                    <h6 class="card-text"><i class="fa fa-map-marker-alt" aria-hidden="true"></i>9191 aveniu</h6>
                     <hr>
                     <ul class="list-inline text-end">
                       <li class="list-inline-item ">$30.000</li>
@@ -88,7 +88,7 @@
                   <div class="card-body">
                     <h4 class="card-title text-star">Plumon coral Fleece estampado en modelo y tamaño a elección</h4>
                     <h5 class="card-text">This is a longer card with supporting .</h5>
-                    <h6 class="card-text">9191 aveniu</h6>
+                    <h6 class="card-text"><i class="fa fa-map-marker-alt" aria-hidden="true"></i>9191 aveniu</h6>
                     <hr>
                     <ul class="list-inline text-end">
                       <li class="list-inline-item ">$30.000</li>
@@ -104,7 +104,7 @@
                   <div class="card-body">
                     <h4 class="card-title text-star">Plumon coral Fleece estampado en modelo y tamaño a elección</h4>
                     <h5 class="card-text">This is a longer card with supporting .</h5>
-                    <h6 class="card-text">9191 aveniu</h6>
+                    <h6 class="card-text"><i class="fa fa-map-marker-alt" aria-hidden="true"></i>9191 aveniu</h6>
                     <hr>
                     <ul class="list-inline text-end">
                       <li class="list-inline-item ">$30.000</li>
@@ -120,7 +120,7 @@
                   <div class="card-body">
                     <h4 class="card-title text-star">Plumon coral Fleece estampado en modelo y tamaño a elección</h4>
                     <h5 class="card-text">This is a longer card with supporting .</h5>
-                    <h6 class="card-text">9191 aveniu</h6>
+                    <h6 class="card-text"><i class="fa fa-map-marker-alt" aria-hidden="true"></i>9191 aveniu</h6>
                     <hr>
                     <ul class="list-inline text-end">
                       <li class="list-inline-item ">$30.000</li>
@@ -136,7 +136,7 @@
                   <div class="card-body">
                     <h4 class="card-title text-star">Plumon coral Fleece estampado en modelo y tamaño a elección</h4>
                     <h5 class="card-text">This is a longer card with supporting .</h5>
-                    <h6 class="card-text">9191 aveniu</h6>
+                    <h6 class="card-text"><i class="fa fa-map-marker-alt" aria-hidden="true"></i>9191 aveniu</h6>
                     <hr>
                     <ul class="list-inline text-end">
                       <li class="list-inline-item ">$30.000</li>
